# MingChat

./: .gitignore  ARTICLE_zh.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  REPUTATION_SPEC.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
daemon/: app.py  chain.py  cli.py  crypto.py  gui.py  identity.py  message.py  p2p_daemon.py  setup.py  spv.py  test_daemon.py  test_integration.py  transport.py
docs/: index.html
mingchat/: __init__.py  bsv_tools.py  client.py  did.py  models.py  protocol.py  reputation.py  spv.py  spv_p2p.py  task.py
plugin/: openclaw.plugin.json
plugin/claude-code/: claude_desktop_config.example.json  mingchat_mcp_server.py
plugin/hermes/: __init__.py  plugin.yaml
scripts/: bridge_cli.py  bridge_server.py  cli.py  mcp_server.py  mingchat-bridge.service  mingchat_mcp_server.py
tests/: test_bridge.py  test_protocol.py
